syntax = "proto3";

package magda.daw;

option cpp_namespace = "magda::daw";

// Complete Magda DAW gRPC Service
service MagdaDAWService {
    // === Agent Management ===
    rpc RegisterAgent(RegisterAgentRequest) returns (RegisterAgentResponse);
    rpc GetConnectedAgents(GetConnectedAgentsRequest) returns (GetConnectedAgentsResponse);
    rpc SendMessageToAgent(SendMessageRequest) returns (SendMessageResponse);
    rpc BroadcastMessage(BroadcastMessageRequest) returns (BroadcastMessageResponse);
    rpc AgentEventStream(stream AgentEventRequest) returns (stream AgentEventResponse);
    
    // === Transport Control ===
    rpc Play(PlayRequest) returns (PlayResponse);
    rpc Stop(StopRequest) returns (StopResponse);
    rpc Record(RecordRequest) returns (RecordResponse);
    rpc SetTempo(SetTempoRequest) returns (SetTempoResponse);
    rpc SetTimeSignature(SetTimeSignatureRequest) returns (SetTimeSignatureResponse);
    rpc SetPlayheadPosition(SetPlayheadPositionRequest) returns (SetPlayheadPositionResponse);
    rpc GetTransportState(GetTransportStateRequest) returns (GetTransportStateResponse);
    
    // === Track Management ===
    rpc CreateTrack(CreateTrackRequest) returns (CreateTrackResponse);
    rpc DeleteTrack(DeleteTrackRequest) returns (DeleteTrackResponse);
    rpc GetTracks(GetTracksRequest) returns (GetTracksResponse);
    rpc SetTrackName(SetTrackNameRequest) returns (SetTrackNameResponse);
    rpc MuteTrack(MuteTrackRequest) returns (MuteTrackResponse);
    rpc SoloTrack(SoloTrackRequest) returns (SoloTrackResponse);
    rpc ArmTrack(ArmTrackRequest) returns (ArmTrackResponse);
    
    // === MIDI Operations ===
    rpc CreateMidiClip(CreateMidiClipRequest) returns (CreateMidiClipResponse);
    rpc GetMidiClipNotes(GetMidiClipNotesRequest) returns (GetMidiClipNotesResponse);
    rpc UpdateMidiClipNotes(UpdateMidiClipNotesRequest) returns (UpdateMidiClipNotesResponse);
    rpc AddNotesToClip(AddNotesToClipRequest) returns (AddNotesToClipResponse);
    rpc RemoveNotesFromClip(RemoveNotesFromClipRequest) returns (RemoveNotesFromClipResponse);
    rpc QuantizeClip(QuantizeClipRequest) returns (QuantizeClipResponse);
    
    // === Audio Operations ===
    rpc CreateAudioClip(CreateAudioClipRequest) returns (CreateAudioClipResponse);
    rpc GetAudioClipInfo(GetAudioClipInfoRequest) returns (GetAudioClipInfoResponse);
    
    // === Mixing Operations ===
    rpc SetTrackVolume(SetTrackVolumeRequest) returns (SetTrackVolumeResponse);
    rpc SetTrackPan(SetTrackPanRequest) returns (SetTrackPanResponse);
    rpc AddEffect(AddEffectRequest) returns (AddEffectResponse);
    rpc RemoveEffect(RemoveEffectRequest) returns (RemoveEffectResponse);
    
    // === Session Management ===
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc LoadSession(LoadSessionRequest) returns (LoadSessionResponse);
    rpc SaveSession(SaveSessionRequest) returns (SaveSessionResponse);
    rpc GetSessionInfo(GetSessionInfoRequest) returns (GetSessionInfoResponse);

    // === Mode Management ===
    rpc SetViewMode(SetViewModeRequest) returns (SetViewModeResponse);
    rpc GetViewMode(GetViewModeRequest) returns (GetViewModeResponse);
    rpc SetAudioMode(SetAudioModeRequest) returns (SetAudioModeResponse);
    rpc GetAudioMode(GetAudioModeRequest) returns (GetAudioModeResponse);
    rpc GetAudioStats(GetAudioStatsRequest) returns (GetAudioStatsResponse);
    
    // === Performance Mode ===
    rpc LaunchClip(LaunchClipRequest) returns (LaunchClipResponse);
    rpc StopClip(StopClipRequest) returns (StopClipResponse);
    rpc GetPerformanceClips(GetPerformanceClipsRequest) returns (GetPerformanceClipsResponse);
    rpc GetPlayingClips(GetPlayingClipsRequest) returns (GetPlayingClipsResponse);
}

// === Data Types ===

message MidiNote {
    int32 pitch = 1;           // 0-127
    int32 velocity = 2;        // 0-127  
    double start_time = 3;     // In beats
    double duration = 4;       // In beats
}

message Track {
    string track_id = 1;
    string name = 2;
    TrackType type = 3;
    bool muted = 4;
    bool soloed = 5;
    bool armed = 6;
    double volume = 7;         // 0.0-1.0
    double pan = 8;            // -1.0 to 1.0
    repeated string clip_ids = 9;
}

enum TrackType {
    AUDIO = 0;
    MIDI = 1;
    INSTRUMENT = 2;
    BUS = 3;
}

message MidiClip {
    string clip_id = 1;
    string track_id = 2;
    double start_time = 3;     // In seconds
    double length = 4;         // In seconds
    repeated MidiNote notes = 5;
}

message AudioClip {
    string clip_id = 1;
    string track_id = 2;
    double start_time = 3;
    double length = 4;
    string audio_file_path = 5;
}

message TransportState {
    bool playing = 1;
    bool recording = 2;
    double current_time = 3;   // In seconds
    double tempo = 4;          // BPM
    int32 time_sig_num = 5;    // Time signature numerator
    int32 time_sig_den = 6;    // Time signature denominator
    bool looping = 7;
    double loop_start = 8;
    double loop_end = 9;
}

message AgentInfo {
    string agent_id = 1;
    string name = 2;
    string type = 3;           // "composer", "mixer", "utility", etc.
    repeated string capabilities = 4;
    int64 connected_timestamp = 5;
}

// === Agent Management Messages ===

message RegisterAgentRequest {
    string name = 1;
    string type = 2;
    repeated string capabilities = 3;
}

message RegisterAgentResponse {
    string agent_id = 1;
    bool success = 2;
    string message = 3;
}

message GetConnectedAgentsRequest {}

message GetConnectedAgentsResponse {
    repeated AgentInfo agents = 1;
}

message SendMessageRequest {
    string target_agent_id = 1;
    string message = 2;       // JSON payload
}

message SendMessageResponse {
    bool success = 1;
    string message = 2;
}

message BroadcastMessageRequest {
    string message = 1;       // JSON payload
    string sender_agent_id = 2;
}

message BroadcastMessageResponse {
    bool success = 1;
    int32 recipients_count = 2;
}

message AgentEventRequest {
    string agent_id = 1;
    repeated string event_types = 2;  // "TRANSPORT_CHANGE", "TRACK_UPDATE", etc.
}

message AgentEventResponse {
    string event_type = 1;
    string event_data = 2;    // JSON payload
    int64 timestamp = 3;
}

// === Transport Messages ===

message PlayRequest {}
message PlayResponse { bool success = 1; }

message StopRequest {}
message StopResponse { bool success = 1; }

message RecordRequest {}
message RecordResponse { bool success = 1; }

message SetTempoRequest { double tempo = 1; }
message SetTempoResponse { bool success = 1; }

message SetTimeSignatureRequest { 
    int32 numerator = 1; 
    int32 denominator = 2; 
}
message SetTimeSignatureResponse { bool success = 1; }

message SetPlayheadPositionRequest { double time_seconds = 1; }
message SetPlayheadPositionResponse { bool success = 1; }

message GetTransportStateRequest {}
message GetTransportStateResponse { 
    TransportState state = 1; 
}

// === Track Messages ===

message CreateTrackRequest {
    string name = 1;
    TrackType type = 2;
}

message CreateTrackResponse {
    string track_id = 1;
    bool success = 2;
}

message DeleteTrackRequest { string track_id = 1; }
message DeleteTrackResponse { bool success = 1; }

message GetTracksRequest {}
message GetTracksResponse { repeated Track tracks = 1; }

message SetTrackNameRequest { 
    string track_id = 1; 
    string name = 2; 
}
message SetTrackNameResponse { bool success = 1; }

message MuteTrackRequest { 
    string track_id = 1; 
    bool muted = 2; 
}
message MuteTrackResponse { bool success = 1; }

message SoloTrackRequest { 
    string track_id = 1; 
    bool soloed = 2; 
}
message SoloTrackResponse { bool success = 1; }

message ArmTrackRequest { 
    string track_id = 1; 
    bool armed = 2; 
}
message ArmTrackResponse { bool success = 1; }

// === MIDI Messages ===

message CreateMidiClipRequest {
    string track_id = 1;
    double start_time = 2;
    double length = 3;
    repeated MidiNote initial_notes = 4;
}

message CreateMidiClipResponse {
    string clip_id = 1;
    bool success = 2;
}

message GetMidiClipNotesRequest { string clip_id = 1; }
message GetMidiClipNotesResponse { repeated MidiNote notes = 1; }

message UpdateMidiClipNotesRequest {
    string clip_id = 1;
    repeated MidiNote notes = 2;
}
message UpdateMidiClipNotesResponse { bool success = 1; }

message AddNotesToClipRequest {
    string clip_id = 1;
    repeated MidiNote notes = 2;
}
message AddNotesToClipResponse { bool success = 1; }

message RemoveNotesFromClipRequest {
    string clip_id = 1;
    double start_time = 2;    // Remove notes in time range
    double end_time = 3;
}
message RemoveNotesFromClipResponse { int32 notes_removed = 1; }

message QuantizeClipRequest {
    string clip_id = 1;
    double grid_size = 2;     // In beats (0.25 = 16th notes)
}
message QuantizeClipResponse { bool success = 1; }

// === Audio Messages ===

message CreateAudioClipRequest {
    string track_id = 1;
    double start_time = 2;
    string audio_file_path = 3;
}

message CreateAudioClipResponse {
    string clip_id = 1;
    bool success = 2;
}

message GetAudioClipInfoRequest { string clip_id = 1; }
message GetAudioClipInfoResponse { AudioClip clip_info = 1; }

// === Mixing Messages ===

message SetTrackVolumeRequest {
    string track_id = 1;
    double volume = 2;        // 0.0-1.0
}
message SetTrackVolumeResponse { bool success = 1; }

message SetTrackPanRequest {
    string track_id = 1;
    double pan = 2;           // -1.0 to 1.0
}
message SetTrackPanResponse { bool success = 1; }

message AddEffectRequest {
    string track_id = 1;
    string effect_type = 2;   // "reverb", "delay", "eq", etc.
    string effect_params = 3; // JSON parameters
}
message AddEffectResponse { 
    string effect_id = 1;
    bool success = 2; 
}

message RemoveEffectRequest {
    string track_id = 1;
    string effect_id = 2;
}
message RemoveEffectResponse { bool success = 1; }

// === Session Messages ===

message CreateSessionRequest {
    string session_name = 1;
    double sample_rate = 2;
    int32 buffer_size = 3;
}
message CreateSessionResponse {
    string session_id = 1;
    bool success = 2;
}

message LoadSessionRequest { string session_file_path = 1; }
message LoadSessionResponse { bool success = 1; }

message SaveSessionRequest { string session_file_path = 1; }
message SaveSessionResponse { bool success = 1; }

message GetSessionInfoRequest {}
message GetSessionInfoResponse {
    string session_name = 1;
    double sample_rate = 2;
    int32 buffer_size = 3;
    int32 track_count = 4;
    double length_seconds = 5;
}

// === Mode Management Messages ===

enum ViewMode {
    ARRANGEMENT = 0;
    PERFORMANCE = 1;
}

enum AudioMode {
    LIVE = 0;
    STUDIO = 1;
}

message SetViewModeRequest {
    ViewMode mode = 1;
}

message SetViewModeResponse {
    bool success = 1;
    string message = 2;
}

message GetViewModeRequest {}

message GetViewModeResponse {
    ViewMode mode = 1;
}

message SetAudioModeRequest {
    AudioMode mode = 1;
}

message SetAudioModeResponse {
    bool success = 1;
    string message = 2;
}

message GetAudioModeRequest {}

message GetAudioModeResponse {
    AudioMode mode = 1;
}

message GetAudioStatsRequest {}

message GetAudioStatsResponse {
    int32 buffer_size = 1;
    int32 sample_rate = 2;
    double latency_ms = 3;
    double cpu_usage = 4;
}

// === Performance Mode Messages ===

message LaunchClipRequest {
    string clip_id = 1;
    double quantize_beats = 2;  // 0 = immediate, 1 = next beat, etc.
}

message LaunchClipResponse {
    bool success = 1;
    string message = 2;
}

message StopClipRequest {
    string clip_id = 1;
    double quantize_beats = 2;
}

message StopClipResponse {
    bool success = 1;
    string message = 2;
}

message GetPerformanceClipsRequest {}

message GetPerformanceClipsResponse {
    repeated string clip_ids = 1;
}

message GetPlayingClipsRequest {}

message GetPlayingClipsResponse {
    repeated string clip_ids = 1;
} 